--- a/kandi/kandi.tex
+++ b/kandi/kandi.tex
@@ -501,7 +501,7 @@ for all x with $1+\gamma x > 0$ where $\gamma \in \mathbb{R}$.
 \end{theorem}
 If F satisfies the equation \ref{fisher} for some $\gamma \in \mathbb{R}$ then it is said that F is in the maximum domain of attraction of $G_{\gamma}$, denoted $F \in D(G_{\gamma})$.
 
-We are especially interested in heavy-tailed distributions, i.e. the case $F \in D(G_{\gamma})$, with $\gamma>0$. It turns out that $F$ being heavy-tailed is equivalent to the function $1-F$ being regularly varying with index $-\frac{1}{\gamma}$. In other words, if the tail function $1-F$ of a distribution is regularly varying then the distribution $F$ is heavy tailed and vice versa. \cite{deHaan}
+We are especially interested in heavy-tailed distributions, i.e. the case $F \in D(G_{\gamma})$, with $\gamma>0$. It turns out that $F$ being heavy-tailed is equivalent to the function $1-F$ being regularly varying with index $-1/ \gamma$. In other words, if the tail function $1-F$ of a distribution is regularly varying then the distribution $F$ is heavy tailed and vice versa. \cite{deHaan}
 
 \begin{theorem}
 Cdf F is in the maximum domain of attraction of the extreme value distribution $G_{\gamma}$ with $\gamma>0$ if and only if $x^*=\infty$ and
@@ -527,7 +527,7 @@ Relation \eqref{Utail} turns out to be easier to work with than \eqref{tail} and
 
 \subsection{Regularly Varying Functions}
 
-In section \ref{domains} we saw that if $F \in D(G_{\gamma>0})$ then U is regularly varying function. Regularly varying functions have some useful properties that are needed for the proof of the Hill estimator's consistency. Let's define regularly varying functions properly \cite{deHaan}:
+In Section \ref{domains} we saw that $F \in D(G_{\gamma})$ with $\gamma>0$ and $U$ being regularly varying function are equivalent conditions. Regularly varying functions have some useful properties that are needed for the proof of the Hill estimator's consistency. Let's define regularly varying functions properly \cite{deHaan}:
 \begin{definition}
 A Lebesque measurable function $f: \mathbb{R}^{+} \rightarrow \mathbb{R}$ that is eventually positive is regularly varying if for some index $\alpha \in \mathbb{R}$,
 \begin{equation}
@@ -537,27 +537,8 @@ A Lebesque measurable function $f: \mathbb{R}^{+} \rightarrow \mathbb{R}$ that i
 \label{regularDef}
 \end{definition}
 
-If function $f$  is regularly varying with index $\alpha=0$ then f is called slowly varying. One property of regularly varying functions is that all of them can be written in form $f(x)=l(x)x^{\alpha}$ where $l(x)$ is slowly varying function. This supports the intuition that heavy tailed distributions behave like pareto distribution after a high threshold. For a slowly varying function the limit relation \ref{regular} can be written in different form with function $F=\log f(e^x)$:
-\begin{equation}
-\lim_{t \rightarrow \infty} F(t+x)-F(x) = 0.
-\label{F}
-\end{equation}
-The above argument is true, since
-\begin{equation*}
-F(t+x)-F(t) = \log f(e^{t+x}) - \log f(e^{t}) = \log \left(\underbrace{\frac{f(e^te^x)}{f(e^t)}}_{\rightarrow 1}\right) \rightarrow 0
-\end{equation*}
-as $t \rightarrow \infty$. The alternative form for slow variation \ref{F} is used in the proof of the uniform convergence.
+If a function $f$  is regularly varying with index $\alpha=0$ then $f$ is said to be slowly varying. One property of regularly varying functions is that all of them can be written in form $f(x)=l(x)x^{\alpha}$ where $l(x)$ is slowly varying function. This supports the intuition that heavy tailed distributions behave like pareto distribution after a high threshold. 
 
-In addition to first-order regular variation \ref{regularDef} there is a second-order condition for regular variation, which allows to examine the rates of converge of the first-order condition. Second-order regular variation is needed for the asymptotic normality of Hill estimator. We define second-order regular variation for case $\gamma > 0$, since it is sufficient considering the Hill estimator.
-
-\begin{definition}
-f is second-order regularly varying function for parameters $\gamma>0$ and $\rho \leq 0$ if for $x>0$
-\begin{equation*}
-\lim_{t \rightarrow \infty} \frac{\frac{f(tx)}{f(t)}-x^{\gamma}}{A(t)} = x^{\gamma} \frac{x^{\rho}-1}{\rho},
-\end{equation*}
-where $A$ is a one-signed function with $\lim_{t \rightarrow \infty} A(t)=0$.
-\label{2RV}
-\end{definition}
 
 
 \begin{theorem}
@@ -605,7 +586,7 @@ Conversely, if \ref{>-1} holds for $-1\leq \alpha < \infty$ or \ref{<-1} holds f
 
 
 
-Next corollary will be the base in the proof of the Hill estimator. 
+The following corollary of the Karamata’s representation theorem will play a key role in the proof of the consistency of the Hill estimator. 
 
 \begin{corollary}
 Suppose $f \in RV_{\alpha}$. If $\varepsilon, \delta>0$ are arbitrary, there exists $t_0=t_0(\varepsilon, \delta)$ such that for $t\geq t_0$, $tx \geq t_0$,
@@ -614,11 +595,6 @@ Suppose $f \in RV_{\alpha}$. If $\varepsilon, \delta>0$ are arbitrary, there exi
 \end{equation*}
 \label{inequality}
 \end{corollary}
-
-Above corollary follows from the theorem \ref{karamata}. So all previously introduced properties of the regularly varying functions are needed before the corollary \label{inequality} can be proved. 
-
-
-
 
 
 
@@ -693,6 +669,19 @@ Then $F \in D(G_{\gamma})$
 
 Furthermore almost sure convergence of Hill estimator is proved in the same article \cite{mason} as above theorem.
 
+{ \color{red}
+In addition to first-order regular variation \ref{regularDef} there is a second-order condition for regular variation, which allows to examine the rates of converge of the first-order condition. Second-order regular variation is needed for the asymptotic normality of Hill estimator. We define second-order regular variation for case $\gamma > 0$, since it is sufficient considering the Hill estimator.
+
+\begin{definition}
+f is second-order regularly varying function for parameters $\gamma>0$ and $\rho \leq 0$ if for $x>0$
+\begin{equation*}
+\lim_{t \rightarrow \infty} \frac{\frac{f(tx)}{f(t)}-x^{\gamma}}{A(t)} = x^{\gamma} \frac{x^{\rho}-1}{\rho},
+\end{equation*}
+where $A$ is a one-signed function with $\lim_{t \rightarrow \infty} A(t)=0$.
+\label{2RV}
+\end{definition}
+}
+
 Lastly we formulate the condition for asymptotic normality for $\hat{\gamma}$ \cite{peng}.
 
 \begin{theorem}
@@ -762,6 +751,24 @@ Lastly we note that  Hill estimator can be extended in various cases. E.g. There
 \subsection{Proof of Theorem \ref{uniform}}
 
 \begin{proof}
+
+{\color{red}
+
+For a slowly varying function the limit relation \ref{regular} can be written in different form with function $F=\log f(e^x)$:
+\begin{equation}
+\lim_{t \rightarrow \infty} F(t+x)-F(x) = 0.
+\label{F}
+\end{equation}
+The above argument is true, since
+\begin{equation*}
+F(t+x)-F(t) = \log f(e^{t+x}) - \log f(e^{t}) = \log \left(\underbrace{\frac{f(e^te^x)}{f(e^t)}}_{\rightarrow 1}\right) \rightarrow 0
+\end{equation*}
+as $t \rightarrow \infty$. The alternative form for slow variation \ref{F} is used in the proof of the uniform convergence.
+
+}
+
+
+
 For the proof it can be assumed that $\alpha=0$. If this isn't the case replace $f(x)$ by $f(x)x^{-\alpha}$. Suppose there exists sequences $t_n \rightarrow \infty$, $x_n \rightarrow 0$ as $n \rightarrow \infty$ such that
 \begin{equation*}
 \left| \frac{f(t_nx_n)}{f(t_n)} - 1 \right| > \delta
