--- a/kandi/kandi.tex
+++ b/kandi/kandi.tex
@@ -732,9 +732,9 @@ In figure \ref{cauchy} we can conclude that convergence is fast with small numbe
 \section{Conclusion}
 \label{conclusion}
 
-We reviewed the proof if the Hill estimator's consistency. Properties of the regularly varying functions played a crucial role in the proof of the consistency. Consistency was also studied with simulations, which also showed that Hill estimator has good finite sample properties. Other properties of the Hill estimator such as asymptotic normality and bias are not in the scope of this article. However, these properties are studied in other articles such as \cite{peng}, \cite{hausler} and \cite{haanResnick}.
+We reviewed the proof of the Hill estimator's consistency. Properties of the regularly varying functions played a crucial role in the proof of the consistency. Consistency was also studied with simulations, which also showed that Hill estimator has good finite sample properties. Other properties of the Hill estimator such as asymptotic normality and bias are not in the scope of this article. However, these properties are studied in other articles such as \cite{peng}, \cite{hausler} and \cite{haanResnick}.
 
-Lastly we note that  Hill estimator can be extended in various cases. E.g. There are estimators similar to Hill estimator  for the case $\gamma \in \mathbb{R}$. Examples of these kind of estimators are Pickands estimator \cite{pickands} and Moment estimator \cite{dekkers}. Hill estimator can also be extended to multivariate case \cite{ilmonen}.
+Finally, we note that the Hill estimator can be extended in various ways. For example, there are estimators similar to Hill estimator for the general case $\gamma \in \mathbb{R}$. Examples of these estimators include the Pickands estimator \cite{pickands} and the Moment estimator \cite{dekkers}. The Hill estimator can also be extended to the multivariate case \cite{ilmonen}.
 
 \clearpage
 
