--- a/kandi/bib.bib
+++ b/kandi/bib.bib
@@ -112,6 +112,7 @@
   title={Multivariate Hill Estimators},
   journal={International Statistical Review},
   volume={85},
+  year={2015},
   number={1},
   pages={108-142},
   doi={10.1111/insr.12120},
@@ -150,6 +151,7 @@
   author={De Haan, L. and Peng, L.},
   title={Comparison of tail index estimators},
   journal= {Statistica Neerlandica},
+  year={1998},
   volume={52},
   number={1},
   pages={60-70},
@@ -236,6 +238,7 @@
 @article{mcneilStock,
   title={Estimation of tail-related risk measures for heteroscedastic financial time series: an extreme value approach},
   journal={Journal of Empirical Finance},
+  author={Alexander J. McNeil and Rüdiger Frey},
   volume={7},
   number={3},
   pages={271 - 300},
@@ -243,7 +246,5 @@
   note={Special issue on Risk Management},
   issn={0927-5398},
   doi={https://doi.org/10.1016/S0927-5398(00)00012-8},
-  url={http://www.sciencedirect.com/science/article/pii/S0927539800000128",
-  author={Alexander J. McNeil and Rüdiger Frey}
+  url={http://www.sciencedirect.com/science/article/pii/S0927539800000128}
 }
-
