--- a/kandi/bib.bib
+++ b/kandi/bib.bib
@@ -248,3 +248,17 @@
   doi={https://doi.org/10.1016/S0927-5398(00)00012-8},
   url={http://www.sciencedirect.com/science/article/pii/S0927539800000128}
 }
+
+@article{potter,
+  author={Potter, H. S. A.},
+  title={The Mean Values of Certain Dirichlet Series, II},
+  journal={Proceedings of the London Mathematical Society},
+  volume={s2-47},
+  number={1},
+  pages={1-19},
+  year={1942}
+  doi={10.1112/plms/s2-47.1.1},
+  url={https://londmathsoc.onlinelibrary.wiley.com/doi/abs/10.1112/plms/s2-47.1.1},
+  eprint={https://londmathsoc.onlinelibrary.wiley.com/doi/pdf/10.1112/plms/s2-47.1.1}
+}
+
