--- a/kandi/bib.bib
+++ b/kandi/bib.bib
@@ -1,6 +1,6 @@
 @book{deHaan,
   title={Extreme Value Theory: An Introduction},
-  author={Laurens De Haan and Ana Ferreira},
+  author={de Haan, Laurens and Ana Ferreira},
   isbn={9780387239460},
   lccn={2006925909},
   series={Springer Series in Operations Research and Financial Engineering},
@@ -46,7 +46,7 @@
 
 @book{resnick,
   title={Heavy-Tail Phenomena: Probabilistic and Statistical Modeling},
-  author={Resnick, S.I.},
+  author={Resnick, Sidney I.},
   number={nid. 10},
   isbn={9780387242729},
   lccn={2006934621},
@@ -121,7 +121,7 @@
 }
 
 @article{pickands,
-  author={III, James Pickands},
+  author={Pickands III, James},
   doi={10.1214/aos/1176343003},
   journal={The Annals of Statistics},
   month={01},
@@ -148,7 +148,7 @@
 }
 
 @article{peng,
-  author={De Haan, L. and Peng, L.},
+  author={de Haan, L. and Peng, L.},
   title={Comparison of tail index estimators},
   journal= {Statistica Neerlandica},
   year={1998},
@@ -256,7 +256,7 @@
   volume={s2-47},
   number={1},
   pages={1-19},
-  year={1942}
+  year={1942},
   doi={10.1112/plms/s2-47.1.1},
   url={https://londmathsoc.onlinelibrary.wiley.com/doi/abs/10.1112/plms/s2-47.1.1},
   eprint={https://londmathsoc.onlinelibrary.wiley.com/doi/pdf/10.1112/plms/s2-47.1.1}
